[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textflowsms"
version = "0.0.2"
dependencies = [
  "requests"
]
authors = [
  { name="Textflow", email="admin@textflow.me" },
]
description = "TextFlow"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://textflow.me"